--- a/public/styles/tweet-container.css
+++ b/public/styles/tweet-container.css
@@ -51,11 +51,11 @@ article.tweet footer {
   justify-content: flex-end;
 }
 
-.tweet-action-icon {
+.tweet-actions>div {
   margin-right: 10px;
   padding: 2px;
 }
 
-.tweet-action-icon:hover {
+.tweet-actions>div:hover {
   background-color: darkgrey;
 }
