--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -7,6 +7,8 @@ nav {
   justify-content: space-between;
   align-items: center;
   padding: 1.5em 2.5em;
+  position: fixed;
+  top: 0;
 }
 
 .cta-newtweet {
