:lipstick: enable tweets to show in reverse chronologica order

--- a/public/styles/tweets-container.css
+++ b/public/styles/tweets-container.css
@@ -1,3 +1,8 @@
+#tweets-container {
+  display: flex;
+  flex-direction: column-reverse;
+}
+
 article.tweet {
   border: solid 4px black;
   padding: 30px;
