:lipstick: added styling for displaying custom error message

--- a/public/styles/tweet-composer.css
+++ b/public/styles/tweet-composer.css
@@ -45,3 +45,18 @@
 .over-limit-red {
   color: red;
 }
+
+.error {
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  text-align: left;
+  padding: .75rem 1.25rem;
+  margin-bottom: 1rem;
+  border: 1px solid transparent;
+  border-radius: .25rem;
+  color: #721c24;
+  background-color: #f8d7da;
+  border-color: #f5c6cb;
+  margin-top: 1rem;
+}
