--- a/public/styles/tweets-container.css
+++ b/public/styles/tweets-container.css
@@ -43,6 +43,7 @@ article.tweet main {
   flex-grow: 1;
   border: 0px;
   border-bottom: solid 4px black;
+  paddig-bottom: 10px;
 }
 
 .timestamp {
