--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -14,6 +14,8 @@ nav {
 .cta-newtweet {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 #logo {
