--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -2,10 +2,15 @@
   width: 100%;
   height: 400px;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  align-content: center;
   flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
   background: url('/images/back-pattern.png');
   background-color: #D89820;
+  color: white;
+}
+
+.header .firstname {
+  margin-right: 10px;
+  font-weight: bold;
 }
