:lipstic: fixed profile name to be responsive

--- a/public/styles/media-queries.css
+++ b/public/styles/media-queries.css
@@ -8,9 +8,12 @@
     padding-top: 120px;
   }
   .header {
-    paddingt-top: none;
+    padding-top: none;
   }
   #logo {
     font-size: 2rem;
+  }
+  .cta-newtweet {
+    transform: none;
   }
 }
