--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -16,7 +16,7 @@ nav {
   align-items: center;
   color: white;
   text-decoration: none;
-  transform: scale(10%);
+  transform: scale(0.8);
 }
 
 #logo {
