:lipstick: tweet actions appear on hover now

--- a/public/styles/tweets-container.css
+++ b/public/styles/tweets-container.css
@@ -58,6 +58,7 @@ article.tweet footer {
 }
 
 .tweet-actions {
+  visibility: hidden;
   display: flex;
   flex-grow: 1;
   justify-content: flex-end;
