--- a/public/styles/header.scss
+++ b/public/styles/header.scss
@@ -6,13 +6,13 @@
   justify-content: space-evenly;
   align-items: center;
   background: url('/images/back-pattern.png');
-  background-color: #D89820;
+  background-color: #d89820;
   color: white;
   padding-top: 50px;
   font-size: 3rem;
-}
 
-.header .firstname {
-  margin-right: 10px;
-  font-weight: bold;
+  .firstname {
+    margin-right: 10px;
+    font-weight: bold;
+  }
 }
