:art: added font-family & base colors

--- a/public/styles/header.scss
+++ b/public/styles/header.scss
@@ -6,8 +6,8 @@
   justify-content: space-evenly;
   align-items: center;
   background: url('/images/back-pattern.png');
-  background-color: #d89820;
-  color: white;
+  background-color: $background-color;
+  color: $font-color-light;
   padding-top: 50px;
   font-size: 3rem;
 
