--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -75,7 +75,7 @@
   align-items: center;
   background: url("/images/back-pattern.png");
   background-color: #d89820;
-  color: white;
+  color: #fff;
   padding-top: 50px;
   font-size: 3rem;
 }
