--- a/public/styles/index.scss
+++ b/public/styles/index.scss
@@ -1,3 +1,7 @@
+$background-color: #d89820;
+$font-color-light: #fff;
+$base-font-family: 'Source Sans Pro', sans-serif;
+
 @import './arrow-container';
 @import './header';
 @import './layout';
