:art: added nav bar color variable

--- a/public/styles/index.scss
+++ b/public/styles/index.scss
@@ -1,4 +1,5 @@
 $background-color: #d89820;
+$base-nav-bar-color: #4056a1;
 $font-color-light: #fff;
 $base-font-family: 'Source Sans Pro', sans-serif;
 
