--- a/public/styles/media-queries.scss
+++ b/public/styles/media-queries.scss
@@ -3,8 +3,8 @@
 @media only screen and (min-width: 1024px) {
   nav {
     background: none;
-    background-color: #4056A1;
     position: fixed;
+    background-color: $base-nav-bar-color;
     top: 0;
   }
   body {
@@ -16,11 +16,11 @@
   }
   #logo {
     font-size: 2rem;
-    color: white;
+    color: $font-color-light;
   }
   .cta-newtweet {
     transform: none;
-    color: white;
+    color: $font-color-light;
   }
   .main-container {
     display: flex;
