--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -93,7 +93,9 @@ html {
   box-sizing: border-box;
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
 
@@ -122,61 +124,23 @@ body {
   font-size: 1rem;
 }
 
-/* Desktop styles */
-@media only screen and (min-width: 1024px) {
-  nav {
-    background: none;
-    background-color: #4056A1;
-    position: fixed;
-    top: 0;
-  }
-
-  body {
-    padding-top: 120px;
-  }
-
-  .header {
-    margin: 100px;
-    font-size: 2rem;
-  }
-
-  #logo {
-    font-size: 2rem;
-    color: white;
-  }
-
-  .cta-newtweet {
-    transform: none;
-    color: white;
-  }
-
-  .main-container {
-    display: flex;
-    flex-direction: row;
-  }
-
-  .container {
-    width: 110%;
-    margin-right: 30px;
-  }
-}
 nav {
   width: 100vw;
   height: 120px;
-  color: white;
+  color: #fff;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 1.5em 2.5em;
   background: url("/images/back-pattern.png");
-  background-color: #D89820;
+  background-color: #d89820;
 }
 
 .cta-newtweet {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: white;
+  color: #fff;
   text-decoration: none;
   transform: scale(0.8);
 }
@@ -209,10 +173,13 @@ nav {
   height: 200px;
   display: none;
 }
-
 .tweet-composer label {
   font-weight: bold;
   font-size: 1em;
+}
+.tweet-composer footer {
+  display: flex;
+  justify-content: space-between;
 }
 
 #tweet-text {
@@ -231,14 +198,9 @@ nav {
   font-family: "Bungee", cursive;
   font-size: 1rem;
   color: white;
-  background-color: #4152A1;
+  background-color: #4056a1;
   border: 0px;
   padding: 10px;
-}
-
-.tweet-composer footer {
-  display: flex;
-  justify-content: space-between;
 }
 
 .counter {
@@ -281,32 +243,23 @@ article.tweet {
   flex-direction: column;
   margin-bottom: 30px;
 }
-
-article.tweet:hover {
-  box-shadow: 5px 5px 0px #C5CBE3;
-}
-
 article.tweet header {
   display: flex;
   align-items: center;
   margin: 5px;
 }
-
-.username {
+article.tweet .username {
   margin-left: 5px;
 }
-
-.userid {
+article.tweet .userid {
   flex-grow: 1;
   text-align: right;
   font-size: 1rem;
   color: gray;
 }
-
-.tweet-profile-pic {
+article.tweet .tweet-profile-pic {
   width: 50px;
 }
-
 article.tweet main {
   margin-top: 10px;
   font-size: 0.8em;
@@ -315,32 +268,70 @@ article.tweet main {
   border-bottom: solid 4px black;
   padding-bottom: 8px;
 }
-
-.timestamp {
+article.tweet .timestamp {
   font-size: 0.7em;
 }
-
 article.tweet footer {
   margin-top: 10px;
   display: flex;
   align-items: center;
 }
-
-.tweet-actions {
+article.tweet .tweet-actions {
   visibility: hidden;
   display: flex;
   flex-grow: 1;
   justify-content: flex-end;
 }
-
-.tweet-actions > div {
+article.tweet .tweet-actions > div {
   margin-right: 10px;
   padding: 2px;
 }
-
-.tweet-actions > div:hover {
+article.tweet .tweet-actions > div:hover {
   color: white;
-  background-color: #4056A1;
+  background-color: #4056a1;
+}
+
+article.tweet:hover {
+  box-shadow: 5px 5px 0px #c5cbe3;
+}
+
+/* Desktop styles */
+@media only screen and (min-width: 1024px) {
+  nav {
+    background: none;
+    position: fixed;
+    background-color: #4056a1;
+    top: 0;
+  }
+
+  body {
+    padding-top: 120px;
+  }
+
+  .header {
+    margin: 100px;
+    font-size: 2rem;
+  }
+
+  #logo {
+    font-size: 2rem;
+    color: #fff;
+  }
+
+  .cta-newtweet {
+    transform: none;
+    color: #fff;
+  }
+
+  .main-container {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .container {
+    width: 110%;
+    margin-right: 30px;
+  }
 }
 
 /*# sourceMappingURL=index.css.map */
