:art: improved structure of sass files

--- a/public/styles/sass/arrow-container.scss
+++ b/public/styles/sass/arrow-container.scss
@@ -25,7 +25,8 @@
   animation: move 3s ease-out 2s infinite;
 }
 
-.chevron:before, .chevron:after {
+.chevron:before,
+.chevron:after {
   content: ' ';
   position: absolute;
   top: 0;
